Use StandardCharsets.UTF_8 constant instead of "UTF-8" String lookup.